Fixed column scroll on home page, now scrolls on mobile. Added icons across site, can add/remove items to watch list. Replace image resize with classes using jquery. Added some media queries for responsiveness

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -63,6 +63,8 @@
     );
 }
 
+/* https://stackoverflow.com/questions/14761119/how-to-stop-divs-from-wrapping */
+/* https://stackoverflow.com/questions/16670931/hide-scroll-bar-but-while-still-being-able-to-scroll */
 /* https://stackoverflow.com/questions/50320756/how-to-stop-3-images-side-by-side-inside-a-div-from-wrapping-to-the-next-line */
 .column {
     /* display: -webkit-box;
@@ -77,36 +79,114 @@
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    overflow: hidden;
+    overflow: scroll;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
     padding: 1%;
+    white-space: nowrap;
 }
 
-.column a img{
+.column::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+.result-box{
+    position: relative;
+    display: inline-block;
+    width: 90%;
+}
+
+.result-box-hover{
+    width: 90%;
+}
+
+.img-small-home{
     height: auto;
-    width: 8%;
+    width: 100%;
     margin: 0.1%;
     flex-shrink: 0;
     padding: 0;
 }
 
-.column a img:hover{
-    height: auto;
-    width: 10%;
-    margin: 0.1%;
-    flex-shrink: 0;
-    padding: 0;
+/* Icons */
+.delete-item-icon,
+.like-item-icon,
+.dislike-item-icon{
+    position: absolute;
+    color: #fff;
+    font-size: 1.5em;
+    margin-top: 120%;
+}
+
+.delete-item-icon{
+    right: 10%;
+}
+
+.dislike-item-icon{
+    right: 40%;
+}
+
+.like-item-icon{
+    right: 70%;
 }
 
 /* Controls */
 
 .fas.fa-angle-left, .fas.fa-angle-right{
     position: absolute;
-    left: 2%;
+    left: 5%;
     top: 50%;
-    font-size: 3em;
+    font-size: 4em;
     color: red;
 }
 
 .fas.fa-angle-right{
-    left: 97%;
+    left: 90%;
+}
+
+@media (min-width: 576px) {
+
+}
+
+@media (min-width: 768px) {
+    .result-box{
+        width: 20%;
+    }
+
+    .result-box-hover{
+        width: 22%;
+    }
+}
+
+@media (min-width: 992px) {
+    .result-box{
+        width: 14%;
+    }
+
+    .result-box-hover{
+        width: 16%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .fas.fa-angle-left, .fas.fa-angle-right{
+        position: absolute;
+        left: 2%;
+        top: 50%;
+        font-size: 3em;
+        color: red;
+    }
+
+    .fas.fa-angle-right{
+        left: 97%;
+    }
+
+    .result-box{
+        width: 10%;
+    }
+
+    .result-box-hover{
+        width: 12%;
+    }
 }
