--- a/static/css/search.css
+++ b/static/css/search.css
@@ -11,7 +11,8 @@
     display: inline;
 }
 
-.result-box img{
+/* images apart from home */
+.img-small{
     height: auto;
     width: 80%;
     margin: 0.1%;
@@ -20,9 +21,23 @@
     margin-top: 2%;
 }
 
-/* .result-box img:hover{
+.img-big{
     width: 90%;
-} */
+}
+
+/* home page images */
+.img-small-home{
+    height: auto;
+    width: 100%;
+    margin: 0.1%;
+    flex-shrink: 0;
+    padding: 0;
+}
+
+.img-big-home{
+    width: 130%;
+}
+
 
 /* watch list */
 
@@ -49,7 +64,7 @@
 }
 
 @media (min-width: 576px) {
-    .result-box img{
+    .img-small{
         height: auto;
         width: 42%;
         margin: 0.1%;
@@ -57,9 +72,9 @@
         padding: 0;
     }
 
-    /* .result-box img:hover{
+    .img-big{
         width: 44%;
-    } */
+    }
 }
 
 @media (min-width: 768px) {
@@ -67,17 +82,17 @@
         margin-top: 20%;
     }
 
-    .result-box img{
+    .img-small{
         height: auto;
         width: 32%;
         margin: 0.1%;
         flex-shrink: 0;
         padding: 0;
-    }
+    } 
 
-    /* .result-box img:hover{
+    .img-big{
         width: 34%;
-    } */
+    }
 }
 
 @media (min-width: 992px) {
@@ -85,7 +100,7 @@
         margin-top: 10%;
     }
 
-    .result-box img{
+    .img-small{
         height: auto;
         width: 22%;
         margin: 0.1%;
@@ -93,9 +108,9 @@
         padding: 0;
     }
 
-    /* .result-box img:hover{
+    .img-big{
         width: 24%;
-    } */
+    }
 }
 
 @media (min-width: 1200px) {
@@ -103,15 +118,15 @@
         margin-top: 5%;
     }
 
-    .result-box img{
+    .img-small{
         height: auto;
-        width: 12%;
+        width: 10%;
         margin: 0.1%;
         flex-shrink: 0;
         padding: 0;
     }
 
-    /* .result-box img:hover{
-        width: 14%;
-    } */
+    .img-big{
+        width: 12%;
+    }
 }
